Ansii colours now translated

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -12,8 +12,10 @@ body,html{
 		background-color: #000;
 		width: 1024px;
 		height: 708px;
-		color: #fff;
+		color: #ccc;
 		overflow:auto;
+		font-family: courier;
+		font-size: 12px;
 	}
 	#cmd{
 		width: 1024px;
