--- a/views/index.html
+++ b/views/index.html
@@ -1,5 +1,5 @@
 <div class="container">
-	<pre id="screen"></pre>
+	<div id="screen"></div>
 	<input type="text" id="cmd" value="" />
 </div>
 <div class="panel">
