--- a/views/index.html
+++ b/views/index.html
@@ -4,4 +4,5 @@
 </div>
 <div class="panel">
 	<input type="button" value="Connect" id="connect" />
+	<input type="button" value="Disconnect" id="disconnect" />
 </div>
