--- a/public/css/style.less
+++ b/public/css/style.less
@@ -120,4 +120,21 @@ body,html{
   input.text { margin-bottom:12px; width:95%; padding: .4em; }
   fieldset { padding:0; border:0; margin-top:25px; }
   h1 { font-size: 1.2em; margin: .6em 0; }
+
+  table.connections{
+    font-size: 12px;
+    width: 100%;
+    td{
+      border-bottom: 1px solid #ccc;
+      border-left: 1px solid #ccc;
+    }
+    tr{
+      &.hover,
+      &.click{
+        td {
+          background-color: #63ffa2;
+        }
+      }
+    }
+  }
 }
